# rottennoodlessmuggler

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  rottennoodlessmuggler.js
artwork/: .gitignore  README.md  button.kra  convert.sh  dumpster.kra  font.conf  font.tga  fonts.conf  mess.tga  strongbox.tga  textures.conf
conepts_and_documents/: items_table.ods
data/: bag.tga  box.tga  button-a.tga  button-b.tga  button-selected.tga  button.tga  dialogs.conf  dumpster-off.tga  dumpster-on.tga  font.conf  items.conf  resources-data.conf  resources-textures.conf  smuggler-with-item.tga  smuggler.tga
src/: Application.cpp  Application.h  Bag.cpp  Bag.h  BagScreen.cpp  BagScreen.h  Button.cpp  Button.h  CMakeLists.txt  ColoringCamera.cpp  ColoringCamera.h  ColoringShader.frag  ColoringShader.vert  Dumpster.cpp  Dumpster.h  GameScreen.cpp  GameScreen.h  Item.cpp  Item.h  MutableTextSprite.cpp  MutableTextSprite.h  Player.cpp  Player.h  Rotten.cpp  Rotten.h  SplashScreen.cpp  SplashScreen.h  Sprite.cpp  Sprite.h  TextSprite.cpp  TextSprite.h  TextureLoader.cpp  TextureLoader.h  WebApplication.css  configure.h.cmake  index.html  shaders.conf
